# travel_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/agents/: ai-architect.md  backend-engineer.md  data-analyst.md  devops-engineer.md  frontend-engineer.md  legal-advisor.md  product-manager.md  prompt-engineer.md  qa-tester.md  scraping-architect.md  scraping-engineer.md  ux-designer.md
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/test/: health.e2e-spec.ts  jest-e2e.json  language-detect.e2e-spec.ts  redirect.e2e-spec.ts  sessions.e2e-spec.ts
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/messages/: en.json  ru.json
apps/web/src/: i18n.ts  middleware.ts
apps/web/tests/: health.test.ts  parse-cards.test.ts
docs/architecture/decisions/: 0001-claude-code-subagents-as-team.md
docs/superpowers/plans/: 2026-04-20-m0-bootstrap.md  2026-04-21-m1-poc.md
docs/superpowers/specs/: 2026-04-20-hotel-deals-bot-team-design.md  (+2 more)
services/ai-agent/: pyproject.toml
services/ai-agent/evals/: cases_en.yaml  cases_ru.yaml  run_evals.py  test_evals.py
services/ai-agent/src/ai_agent/: agent.py  config.py  db.py  main.py  system_prompt.py
services/ai-agent/src/ai_agent/tools/: __init__.py  get_hotel_details.py  search_hotels.py
services/ai-agent/tests/: test_agent_loop.py  test_health.py  test_system_prompt.py  test_tools.py  test_turn_endpoint.py
services/scraper/: pyproject.toml
services/scraper/fixtures/: barcelona.html  details_example.html
services/scraper/src/scraper/: booking.py  booking_parse.py  booking_selectors.py  fx.py  health.py  proxy_pool.py  types.py
services/scraper/tests/: test_booking_details.py  test_booking_live.py  test_booking_parse.py  test_fx.py  test_health.py
tests/e2e/: smoke.spec.ts
(+27 files in other folders)
