[project]
name = "scraper"
version = "0.0.1"
description = "Hotel aggregator scraper service for Hotel Deals Bot"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "lxml>=5.2.0",
  "cssselect>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
